--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel='stylesheet' href='lib/icecream/icecream-grid.css'>
  <!-- <link rel='stylesheet' href='lib/leaflet/leaflet.css'>   //robe di mappe-->       
         <link rel='stylesheet' href='style/style.css'/>
-        <title>MyShopApp</title>
+        <title>MyShop</title>
 	</head>
     <body> 
         <script type='text/javascript' src='cordova.js'></script>
